# CVCutter

./: .gitignore  README.md  YOUTUBE_UPLOAD_WORKFLOW.md  app.py  build_exe.py  config_manager.py  detect_performances.py  main.py  pyproject.toml  requirements.txt  run_app.py  run_youtube_workflow.py  video_processor.py
src/cvcutter/: __init__.py  app.py  config_manager.py  create_google_form.py  pdf_parser.py  run_youtube_workflow.py  sync_audio.py  video_mapper.py  video_processor.py  video_utils.py  youtube_uploader.py
